# helium

./: Cargo.toml  README.md
assets/dialogs/: choices.dialog.json  intro.dialog.json  school.dialog.json
assets/lang/: en-us.json  jp-jp.json  th-th.json
src/: lib.rs  main.rs  types.rs
src/client/render/: character.rs  mod.rs  setup.rs  transition.rs
src/client/render/ui/: choice.rs  dialog.rs  main_menu.rs  mod.rs
src/common/: game_state.rs  helium.rs  mod.rs  plugin.rs
src/common/dialog/: choice.rs  init.rs  mod.rs  types.rs  typewriter.rs
src/common/util/: identifier.rs  input_handler.rs
src/core/: game_state.rs  mod.rs  plugin.rs  resources.rs
src/core/dialog/: choice.rs  manager.rs  mod.rs  typewriter.rs
src/core/language/: fonts.rs  manager.rs  mod.rs  sync.rs  types.rs
src/core/scene/: background.rs  character.rs
src/core/text/: builder.rs  components.rs  mod.rs  styles.rs
src/ui/: choice.rs  dialog.rs  main_menu.rs  mod.rs  pause.rs  settings.rs
src/util/: identifier.rs  input.rs  input_handler.rs  mod.rs
