[package]
name = "helium"
version = "0.1.0"
edition = "2024"
authors = ["MrSypztep"]
description = "Helium A Visual Novel Engine built with Bevy"

[dependencies]
bevy = "0.14.2"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
serde_json = "1.0.140"
env_logger = "0.11.8"
tokio = "1.45.0"

[[bin]]
name = "helium_client"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
