[package]
name = "helium"
version = "0.1.1"
edition = "2024"
authors = ["MrSypztep"]
description = "Helium A Visual Novel Engine built with Bevy"

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_state",
    "bevy_pbr",
    "png",
    "hdr",
    "x11",
    "file_watcher",
    "tonemapping_luts",
    "default_font",
    "multi_threaded"
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"

[[bin]]
name = "helium_client"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
